{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player Actions",
            "id": "01e811e9-2c40-46bf-bbca-af5349b4ff28",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "d72383a5-fd93-4786-8b95-ae4fb162c2e2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "CameraMovement",
                    "type": "Value",
                    "id": "e2e07221-e337-48dd-8421-9da205dc2b22",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "MoveUpDown",
                    "type": "Button",
                    "id": "7c764d1e-546b-44ae-b72a-4eab0fffea83",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "MoveLeftRight",
                    "type": "Button",
                    "id": "00d86862-4fde-46bf-a116-eef41967fa60",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e6b3a02e-ca91-463e-a6fb-0ed92e32436e",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91e3e910-8e91-49fa-912f-7b2a53fb0e41",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up Down",
                    "id": "80dfb7f3-66cd-4a4a-834b-02f19fd8d3b2",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUpDown",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a24ea447-edc6-453c-99ec-484e888d3ef7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "77c99c87-d946-4974-ae41-46710a2a338c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left Right",
                    "id": "046d22ea-1f6d-46ed-aa80-d4f609110ce3",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "4b798758-ee07-43d2-b8f2-b4ad4b3c2e8e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d59b818a-7727-4eda-a426-9d06fb15100f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "MoveLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}